# roc-lang

./: .gitignore  CMakeLists.txt  README.md  main.cpp
compiler/: Builtins.cpp  Builtins.h  Constants.h  Extensions.h  LLVMBackend.cpp  LLVMBackend.h  LLVMUtils.cpp  LLVMUtils.h  RocCompiler.cpp  RocCompiler.h  Types.cpp  Types.h
linking/: API.cpp  API.h  Math.cpp  Math.h
mir/: MIR.cpp  MIR.h
parser/: AST.cpp  AST.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
passes/: MemoryPass.cpp  MemoryPass.h
sample/: output.s
sample/source/: sample.roc
sdk/math/: sqrt.roc
tests/: CMakeLists.txt  Catch.h  ExprHandler.h  TestRunner.cpp  test_Ints.cpp  test_ModuleParser.cpp  test_arrays.cpp
tests/sandbox/parser/: Module1.roc  Module2.roc  Module3.roc  Module4.roc  Module5.roc  Module6.roc  Module7.roc
tests/sandbox/runner/arrays/: array1.roc
tests/sandbox/runner/ints/: ints.roc  liftInt32ToStruct.roc
tests/sandbox/runner/rawStrings/: liftRawStringToStruct.roc
tests/sandbox/runner/smoke/: smoke.roc  smoke1.roc
